--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#607D8B</color>
-    <color name="colorPrimaryDark">#455A64</color>
-    <color name="colorAccent">#FF5722</color>
+    <color name="textPrimary">#515151</color>
+    <color name="colorPrimary">#515151</color>
+    <color name="colorPrimaryDark">#D8D9DA</color>
+    <color name="colorAccent">#1083F6</color>
 </resources>
