--- a/app/src/main/res/layout/activity_pre_game.xml
+++ b/app/src/main/res/layout/activity_pre_game.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="@string/preGameHomeTeamLabel"
-            android:textColor="@color/textPrimary"
+            android:textColor="@color/colorHomeText"
             app:layout_constraintBottom_toBottomOf="@id/preGameHomeTeamInput"
             app:layout_constraintEnd_toStartOf="@id/preGameGuideline"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="20dp"
             android:inputType="textCapWords"
-            android:textColor="@color/textPrimary"
+            android:textColor="@color/colorHomeText"
             android:text="@={viewModel.homeTeamName}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/preGameGuideline"
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="@string/preGameAwayTeamLabel"
-            android:textColor="@color/textPrimary"
+            android:textColor="@color/colorAwayText"
             app:layout_constraintBottom_toBottomOf="@id/preGameAwayTeamInput"
             app:layout_constraintEnd_toStartOf="@id/preGameGuideline"
             app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="20dp"
             android:inputType="textCapWords"
-            android:textColor="@color/textPrimary"
+            android:textColor="@color/colorAwayText"
             android:text="@={viewModel.awayTeamName}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/preGameGuideline"
