--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -60,6 +60,21 @@
             android:layout_marginHorizontal="30dp"
             android:onClick="@{_ -> viewModel.onNewGamePressed()}"
             app:backgroundTint="@color/colorAccent"
+            app:layout_constraintBottom_toTopOf="@id/homeRecordsButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:cornerRadius="100dp"
+            />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/homeRecordsButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:layout_marginHorizontal="30dp"
+            android:text="@string/homeRecords"
+            android:textColor="@android:color/white"
+            android:onClick="@{_ -> viewModel.onRecordsPressed()}"
             app:layout_constraintBottom_toTopOf="@id/homeExitButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
